Fixed overflow problem for cards

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -10,6 +10,7 @@ h2 {
     height: 200px;
     margin: 5px 0;
     padding: 5px;
+    overflow: hidden;
 }
 
 button {
